<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
      <artifactId>engine-parent</artifactId>
      <groupId>io.lumeer</groupId>
      <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>

   <artifactId>lumeer-core</artifactId>
   <name>Lumeer Core</name>

   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>11</maven.compiler.source>
      <maven.compiler.target>11</maven.compiler.target>
      <kotlin.version>1.4.21</kotlin.version>
      <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
      <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
   </properties>

   <dependencies>
      <dependency>
         <groupId>io.lumeer</groupId>
         <artifactId>lumeer-storage-api</artifactId>
      </dependency>
      <dependency>
         <groupId>io.lumeer</groupId>
         <artifactId>lumeer-storage-mongodb</artifactId>
         <scope>runtime</scope>
      </dependency>

      <dependency>
         <groupId>javax.enterprise</groupId>
         <artifactId>cdi-api</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>javax.annotation</groupId>
         <artifactId>javax.annotation-api</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>javax.ejb</groupId>
         <artifactId>javax.ejb-api</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>com.fasterxml.jackson.module</groupId>
         <artifactId>jackson-module-jaxb-annotations</artifactId>
         <scope>provided</scope>
      </dependency>

      <dependency>
         <groupId>org.jboss.spec.javax.servlet</groupId>
         <artifactId>jboss-servlet-api_4.0_spec</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.spec.javax.enterprise.concurrent</groupId>
         <artifactId>jboss-concurrency-api_1.0_spec</artifactId>
      </dependency>
      <dependency>
         <groupId>org.jboss.spec.javax.ejb</groupId>
         <artifactId>jboss-ejb-api_3.2_spec</artifactId>
      </dependency>
      <dependency>
         <groupId>javax.mail</groupId>
         <artifactId>mail</artifactId>
      </dependency>

      <dependency>
         <groupId>org.mongodb</groupId>
         <artifactId>mongo-java-driver</artifactId>
      </dependency>

      <dependency>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>s3</artifactId>
      </dependency>
      <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
      </dependency>
      <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpcore</artifactId>
      </dependency>

      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
      </dependency>
      <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
      </dependency>

      <dependency>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-stdlib</artifactId>
      </dependency>

      <!-- Testing -->
      <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-agent</artifactId>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>com.univocity</groupId>
         <artifactId>univocity-parsers</artifactId>
      </dependency>
      <dependency>
         <groupId>cz.gopay</groupId>
         <artifactId>gp-java-api-v3-common</artifactId>
         <version>3.4.8</version>
      </dependency>
      <dependency>
         <groupId>cz.gopay</groupId>
         <artifactId>gp-java-api-v3-resteasy</artifactId>
         <version>3.4.8</version>
         <exclusions>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-jaxrs</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-client</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-jaxb-provider</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-jackson-provider</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-multipart-provider</artifactId>
            </exclusion>
         </exclusions>
      </dependency>

      <dependency>
         <groupId>com.auth0</groupId>
         <artifactId>mvc-auth-commons</artifactId>
      </dependency>
      <dependency>
         <groupId>com.auth0</groupId>
         <artifactId>java-jwt</artifactId>
      </dependency>
      <dependency>
         <groupId>com.googlecode.json-simple</groupId>
         <artifactId>json-simple</artifactId>
      </dependency>
      <dependency>
         <groupId>org.marvec</groupId>
         <artifactId>pusher</artifactId>
      </dependency>
      <dependency>
         <groupId>io.sentry</groupId>
         <artifactId>sentry</artifactId>
      </dependency>

      <dependency>
         <groupId>org.graalvm.sdk</groupId>
         <artifactId>graal-sdk</artifactId>
      </dependency>
      <dependency>
         <groupId>org.graalvm.sdk</groupId>
         <artifactId>polyglot-tck</artifactId>
      </dependency>
      <dependency>
         <groupId>org.graalvm.truffle</groupId>
         <artifactId>truffle-api</artifactId>
      </dependency>
      <dependency>
         <groupId>org.graalvm.js</groupId>
         <artifactId>js</artifactId>
      </dependency>

      <dependency>
         <groupId>com.floreysoft</groupId>
         <artifactId>jmte</artifactId>
      </dependency>

   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-maven-plugin</artifactId>
            <version>${kotlin.version}</version>
            <executions>
               <execution>
                  <id>compile</id>
                  <goals>
                     <goal>compile</goal>
                  </goals>
                  <configuration>
                     <sourceDirs>
                        <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                        <sourceDir>${project.basedir}/src/main/java</sourceDir>
                     </sourceDirs>
                  </configuration>
               </execution>
               <execution>
                  <id>test-compile</id>
                  <goals>
                     <goal>test-compile</goal>
                  </goals>
                  <configuration>
                     <sourceDirs>
                        <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
                        <sourceDir>${project.basedir}/src/test/java</sourceDir>
                     </sourceDirs>
                  </configuration>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven.compiler.plugin.version}</version>
            <configuration>
               <source>${maven.compiler.source}</source>
               <target>${maven.compiler.target}</target>
            </configuration>
            <executions>
               <!-- Replacing default-compile as it is treated specially by maven -->
               <execution>
                  <id>default-compile</id>
                  <phase>none</phase>
               </execution>
               <!-- Replacing default-testCompile as it is treated specially by maven -->
               <execution>
                  <id>default-testCompile</id>
                  <phase>none</phase>
               </execution>
               <execution>
                  <id>java-compile</id>
                  <phase>compile</phase>
                  <goals>
                     <goal>compile</goal>
                  </goals>
               </execution>
               <execution>
                  <id>java-test-compile</id>
                  <phase>test-compile</phase>
                  <goals>
                     <goal>testCompile</goal>
                  </goals>
                  <configuration>
                     <skip>${maven.test.skip}</skip>
                  </configuration>
               </execution>
            </executions>
         </plugin>

      </plugins>
   </build>


</project>
